// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config actions configReset created and dispatched correctly 1`] = `
Array [
  Object {
    "type": "CONFIG_RESET",
  },
]
`;

exports[`Config actions configUpdateGlobalFilterStr created and dispatched correctly 1`] = `
Array [
  Object {
    "payload": Object {
      "configGlobalFilterString": "configGlobalFilterString",
    },
    "type": "CONFIG_UPDATE_GLOBAL_FILTER_STR",
  },
]
`;

exports[`Config actions configUpdateNewWindowPosition created and dispatched correctly 1`] = `
Array [
  Object {
    "type": "CONFIG_UPDATE_NEW_WINDOW_POSITION",
  },
]
`;

exports[`Config actions configUpdateNewWindowPositionAddDelta created and dispatched correctly 1`] = `
Array [
  Object {
    "type": "CONFIG_UPDATE_NEW_WINDOW_POSITION_ADD_DELTA",
  },
]
`;

exports[`Config actions configUpdateNewWindowPositionResetLeft created and dispatched correctly 1`] = `
Array [
  Object {
    "type": "CONFIG_UPDATE_NEW_WINDOW_POSITION_RESET_LEFT",
  },
]
`;

exports[`Config actions configUpdateNewWindowPositionResetTop created and dispatched correctly 1`] = `
Array [
  Object {
    "type": "CONFIG_UPDATE_NEW_WINDOW_POSITION_RESET_TOP",
  },
]
`;

exports[`Config actions configUpdateOneField created and dispatched correctly 1`] = `
Array [
  Object {
    "payload": Object {
      "name": "name",
      "value": "value",
    },
    "type": "CONFIG_UPDATE_ONE_FIELD",
  },
]
`;
